--- a/style/style.css
+++ b/style/style.css
@@ -9,12 +9,16 @@ body{
     line-height: 0rem;
 }
 
+label{
+    margin-left: 1rem;
+}
+
 .red{
     color:red;
 }
 
-.pink{
-    color:pink;
+.black{
+    color:white;
 }
 
 .defaultColor{
