--- a/style/pacman.css
+++ b/style/pacman.css
@@ -24,13 +24,15 @@ body{
 .pacman-bow{
   width: 70%;
   height: 50%;
-  position: absolute;
+  position: relative;
   left: 15%;
   top: -40%;
   /* background-image:url(../img/bow.svg);
   background-repeat: no-repeat;
   background-size: 100px 200px; */
   text-align: center;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .pacman-bow svg{
@@ -48,13 +50,13 @@ body{
 }
 
 .pacman-bow>span:first-of-type{
-  left: 1px;
+  left: 15%;
   border-width: 3px 0 3px 5px;
   border-color: transparent transparent transparent #ff0000;
 }
 
 .pacman-bow>span:last-of-type{
-  right:1px;
+  right:15%;
   border-width: 3px 5px 3px 0;
   border-color: transparent #ff0000 transparent transparent;
 }
@@ -64,7 +66,7 @@ body{
     height:200px!important;
     position: absolute;
     left: 40%;
-    top: 40%;
+    top: 23%;
 }
 
 .pacman{
