--- a/style/style.css
+++ b/style/style.css
@@ -10,9 +10,17 @@ body{
 #makeHuge{    
     display: block;
     background-color: red;
+    color:white;
+    font-weight: 900;
     margin: 1rem;
     height: 5rem;
+    width: 5rem;
     border-radius: 3rem;
+}
+
+#genderSwitcherText{
+    color:white;
+    display: inline-block;
 }
 
 .container{
@@ -20,6 +28,7 @@ body{
     margin:3rem auto;
     padding:3rem 5rem; 
     line-height: 0rem;
+    position: relative;
 }
 
 .hide{
