--- a/style/pacman.css
+++ b/style/pacman.css
@@ -12,7 +12,7 @@ html{
 
 p{
   color:#FFF;
-  font: 30px 'Press Start 2P',  cursive;
+  font: 30px 'Press Start 2P', cursive;
   text-align:center;
 }
 
@@ -27,12 +27,7 @@ body{
   position: relative;
   left: 15%;
   top: -40%;
-  /* background-image:url(../img/bow.svg);
-  background-repeat: no-repeat;
-  background-size: 100px 200px; */
   text-align: center;
-  /* display: flex;
-  justify-content: center; */
 }
 
 .pacman-bow svg{
@@ -70,7 +65,7 @@ body{
 }
 
 .pacman{
-  /* margin:40px 10px; */
+  z-index:10;
   width:100%;
   height:100%;
 }
