--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,21 @@ body{
     justify-content: space-around;
 }
 
+.picture{
+    text-align: center;
+}
+
+.picture img{
+    max-width:50%;
+    max-height: 10vh;
+}
+
 .switch-container{
     margin: 1rem;
 }
 
-#makeHuge{    
-    display: block;
-    background-color: red;
+#makeHuge, #makeSuperPower{    
+    display: inline-block;
     color:white;
     font-weight: 900;
     margin: 1rem;
@@ -23,16 +31,12 @@ body{
     border-radius: 3rem;
 }
 
-#makeSuperPower{
+#makeHuge{
+background-color: red;
+}
 
-    display: block;
+#makeSuperPower{
     background-color: green;
-    color:white;
-    font-weight: 900;
-    margin: 1rem;
-    height: 3rem;
-    width: 3rem;
-    border-radius: 3rem;
 }
 
 #genderSwitcherText{
@@ -40,8 +44,9 @@ body{
 }
 
 .container{
-    background-color: rgba(239, 141, 227, 0.935);
-    margin:3rem auto;
+    background-color: black;
+    /* //rgba(239, 141, 227, 0.935); */
+    margin:1rem auto;
     padding:3rem 5rem; 
     line-height: 0rem;
     position: relative;
