--- a/style/pacman.css
+++ b/style/pacman.css
@@ -29,6 +29,17 @@ body{
   top: 23%;
 }
 
+.huge-pacman .bottom-jowl{
+  transform: scale(2);
+  top: -3px;
+  right: 5px;
+}
+
+.huge-pacman .top-jowl{
+  transform: scale(2) rotate(.5turn);bottom: -3px;
+  right: 5px;
+}
+
 .pacman{
 z-index:10;
 position: absolute;
@@ -88,6 +99,42 @@ background-color:yellow;
   width:100%;
   border-radius:0 0 100px 100px;
   animation: spin2 0.5s infinite linear;
+  position: relative;
+}
+
+.bottom-jowl{
+  position: absolute;    
+  top: -2px;
+  right: 1px;
+  display: flex;
+}
+
+.top-jowl{
+  position: absolute; 
+  transform: rotate(.5turn);   
+  bottom: -2px;
+  right: 1px;
+  display: flex;
+}
+
+.pacman-eye{
+  display: inline-block;
+  width: 4px;
+  height: 1px;
+  background-color: black;
+  position:absolute;
+  bottom: 41%;
+  right: 20%;
+  transform: rotate(.15turn);
+}
+
+.tooth {
+  display: inline-block;
+  width: 0; 
+  height: 0; 
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  border-bottom: 2px solid white;
 }
 
 .feed {
